objects/Appointment__c.object
<CustomObject>
    <description>Holds information like the doctor, the patient, date, time, room number</description>
    <fields>
        <fullName>Date_Time__c</fullName>
        <description>The Date and Time of the Appointment</description>
        <inlineHelpText>Please enter the correct Date and Time of this Appointment.</inlineHelpText>
        <label>Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <description>Name of the doctor holding the Appointment</description>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>DoctorsAppointments</relationshipLabel>
        <relationshipName>DoctorsAppointment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>This is the Patient attending the appointment</description>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PatientAppointments</relationshipLabel>
        <relationshipName>PatientAppointments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Room_Number__c</fullName>
        <description>This is this the actual room for the Appointment</description>
        <inlineHelpText>Please chose one the available rooms.</inlineHelpText>
        <label>Room Number</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Time__c</columns>
        <columns>Room_Number__c</columns>
        <columns>Doctor__c</columns>
        <columns>Patient__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Appointment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>